<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blank Store</string>
    <string name="app_developer">NOGAPPS Project</string>
    <string name="download_notify_title">Downloading…</string>
    <string name="download_notify_finished">Download Finished.</string>
    <string name="download_notify_failed">Download failed.</string>
    <string name="connect_notify_title">Connecting…</string>
    <string name="startdownload_notify_title">Starting Download…</string>
    <string name="search">Search</string>
    <string name="apps">Apps</string>
    <string name="menu_search_hint">Search Blank Store</string>
    <string name="perm_check_license_label">Google Play license check</string>
    <string name="perm_check_license_desc">Can check if you have a license for this app from Google Play. [PLACEHOLDER! DOESN\'T ACTUALLY WORK]</string>
    <string name="perm_billing_label">Google Play billing service</string>
    <string name="perm_billing_desc">Allows the user to purchase items through Google Play from within this app. [PLACEHOLDER! DOESN\'T ACTUALLY WORK]</string>
    <string name="app_price_free">Free</string>
    <string name="app_installed">Installed</string>
    <string name="app_installing">Installing…</string>
    <string name="app_uninstalling">Uninstalling…</string>
    <string name="app_install">Install</string>
    <string name="app_uninstall">Uninstall</string>
    <string name="app_start">Open</string>
    <string name="app_update">Update</string>
    <string name="details_description">Description</string>
    <string name="details_downloads">Downloads</string>
    <string name="account_google_play">Google Play Account for BlankStore</string>
    
    <string name="login_exception">An Exception occured while Login! Please restart the app. If this happens again, login to your google account from web and try again. If it still does not work, contact NOGAPPS Team</string>
    
    <string name="contentDescription_appIcon">App Icon</string>
    <string name="contentDescription_star1">First Star</string>
    <string name="contentDescription_star2">Second Star</string>
    <string name="contentDescription_star3">Third Star</string>
    <string name="contentDescription_star4">Fourth Star</string>
    <string name="contentDescription_star5">Fifth Star</string>
    <string name="contentDescription_stopDownload">Stop Download Button</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="account_login_hint">Login (e.g. myname@gmail.com)</string>
    <string name="password">Password</string>
    <string name="androidId">Android ID</string>
    <string name="create_account">Create Account</string>
    <string name="operatorName">Operator-Name</string>
    <string name="operatorCode">Operator-Code (MCC+MNC)</string>
    <string name="sdkVersion">SDK Version</string>
    <string name="deviceName">Device Name</string>

</resources>