<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_bg"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/contentDescription_appIcon"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txt_subtitle"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textAllCaps="true"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btn_install"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="bottom"
                        android:layout_margin="0dip"
                        android:background="@drawable/btn_install_background"
                        android:paddingBottom="0dip"
                        android:paddingTop="0dip"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/holo_blue_dark" />

        <LinearLayout
            android:id="@+id/installed_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="0dip"
                    android:layout_height="42dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/app_start"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_uninstall"
                    android:layout_width="0dip"
                    android:layout_height="42dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/app_uninstall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/holo_blue_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/installing_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_download_bytes"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/txt_download_percent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/prg_download"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_download_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/contentDescription_stopDownload"
                    android:focusable="true"
                    android:src="@drawable/ic_download_stop" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/holo_blue_dark" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" >

                <LinearLayout
                    android:id="@+id/screenshots"
                    android:layout_width="wrap_content"
                    android:layout_height="210dp"
                    android:visibility="gone" >

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/view_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" >

                        <ImageView
                            android:id="@+id/img_rate1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contentDescription_star1" />

                        <ImageView
                            android:id="@+id/img_rate2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contentDescription_star2" />

                        <ImageView
                            android:id="@+id/img_rate3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contentDescription_star3" />

                        <ImageView
                            android:id="@+id/img_rate4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contentDescription_star4" />

                        <ImageView
                            android:id="@+id/img_rate5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contentDescription_star5" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_ratecount"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_lastupdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" >

                    <TextView
                        android:id="@+id/txt_downloads"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/details_description"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/holo_blue_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/prog_loading"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>